fixes footer spacing / responsiveness

--- a/site/src/styles/styles.scss
+++ b/site/src/styles/styles.scss
@@ -11,9 +11,6 @@
 .space-left {
   padding-left: 1em;
 }
-.space-top {
-  padding-top: 1.2em;
-}
 
 .no-wrap {
   white-space: nowrap;
